application_cd/ai-integration/ai-infra-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "82"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"ai-infra-service","namespace":"bravo-ai-integration-ns"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"ai-infra-service"}},"template":{"metadata":{"labels":{"app":"ai-infra-service"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"ai-infra-config"}},{"secretRef":{"name":"ai-infra-secrets"}}],"image":"192.168.0.244:30305/bravo/ai-infra-service:latest","livenessProbe":{"httpGet":{"path":"/he [...]
  name: ai-infra-service
  namespace: bravo-ai-integration-ns
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ai-infra-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-12-23T21:25:24+09:00"
      labels:
        app: ai-infra-service
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: ai-infra-config
            - secretRef:
                name: ai-infra-secrets
          image: bravo/ai-infra-service:latest
          imagePullPolicy: Never
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3011
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: ai-infra-service
          ports:
            - containerPort: 3011
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3011
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: ai-infra-service
      serviceAccountName: ai-infra-service
      terminationGracePeriodSeconds: 30
